tests/rosetta/out/Rust/active-object.error
rustc: exit status 1
error[E0689]: can't call method `parse` on ambiguous numeric type `{integer}`
  --> /tmp/active-object.rs:22:21
   |
22 |         let t2 = (i.parse::<f64>().unwrap()) * dt;
   |                     ^^^^^
   |
help: you must specify a type for this binding, like `i32`
   |
20 |     let mut i: i32 = 1;
   |              +++++

error[E0689]: can't call method `parse` on ambiguous numeric type `{integer}`
  --> /tmp/active-object.rs:31:28
   |
31 |         let t2 = 2.0 + (i2.parse::<f64>().unwrap()) * dt;
   |                            ^^^^^
   |
help: you must specify a type for this binding, like `i32`
   |
29 |     let mut i2: i32 = 1;
   |               +++++

error[E0689]: can't call method `parse` on ambiguous numeric type `{integer}`
 --> /tmp/active-object.rs:9:49
  |
9 |             let denom = ((2 * n) * (2 * n + 1)).parse::<f64>().unwrap();
  |                                                 ^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0689`.
